Calendar: Fix message entry color in dark mode

--- a/css/page.css
+++ b/css/page.css
@@ -44,6 +44,7 @@
 }
 
 .tikkun-message {
+  color: var(--page-ink-color);
   font-style: italic;
   text-align: center;
   margin-top: -0.7em;
